Tickets page completed with socket integration for comments

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
   --blue: blue;
   --red: red;
   --accent-dark: #cb4a75;
+  --accent-light: #ffcedf;
   --sky: #008cff;
   --disable: #656565;
   --primary: #333333;
